--- a/index.css
+++ b/index.css
@@ -1,8 +1,13 @@
 .London {
+  margin-top: 7rem;
   background-color: #000;
   color: white;
   padding: 3rem 1rem;
 }
 p {
   font-size: 18px;
+}
+body {
+  width: 60%;
+  margin: auto;
 }
