--- a/index.css
+++ b/index.css
@@ -1,8 +1,9 @@
-/* * {
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-} */
+}
+/* The code above is getting rid of the default space provided by the html*/
 .London {
   margin-top: 7rem;
   background-color: #000;
@@ -13,6 +14,7 @@ p {
   font-size: 18px;
 }
 body {
-  width: 60%;
+   width: 60%;
   margin: auto;
 }
+
